--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,36 @@
+* {
+    background-color: black;
+    font-family: monospace;
+}
+
 body {
+    border: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    gap: 75px;
 }
 
 .calculator {
-    background-color: lightgrey;
-    width: 550px;
-    height: 700px;
-    border: solid 4px black;
+    min-width: 575px;
+    min-height: 700px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
+    flex: 0;
 }
 
 .display-container {
-    border: solid 4px black;
+    border: solid 2px white;
+    color: white;
+    justify-content: flex-end;
     flex: 1;
     display: flex;
-    flex-direction: column;
     margin: 12px;
-    border-radius: 10% / 25%;
     padding: 24px;
+    min-height: 144px;
 }
 
 .display {
@@ -30,7 +38,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-size: 96px;
+    font-size: 80px;
 }
 
 .buttons {
@@ -38,20 +46,37 @@ body {
     margin: 12px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .row {
     display: flex;
-    flex: 1;
+    justify-content: space-between;
 }
 
 button {
-    flex: 1;
     font-size: 36px;
-    margin: 8px;
+    min-width: 96px;
+    min-height: 72px;
 }
 
 .backspace {
-    flex: 2.3333333;
+    min-width: 247.666px;
+}
+
+.number {
+    border: solid 2px rgb(135, 204, 227);
+    color: rgb(135, 204, 227);
+}
+
+.operator {
+    border: solid 2px lightcoral;
+    color: lightcoral;
+}
+
+.AC,
+.backspace,
+.equals {
+    border: solid 2px lightgreen;
+    color: lightgreen;
 }
